# lovekuhnya_mini_crm_test_task

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
docker-compose/: docker-compose.local.yaml
entrypoints/: entrypoint_http_api.sh  entrypoint_migrations.sh
src/commons/app_errors/: errors.py
src/commons/db/: sqlalchemy.py
src/commons/dtos/: pagination.py
src/commons/entities/: __init__.py  base.py
src/commons/http_api/: auth.py  exception_handlers.py  schemas.py
src/commons/operations/: __init__.py  operations.py
src/mini_crm/application/activities/: __init__.py  dtos.py  enums.py  errors.py
src/mini_crm/application/contacts/: dtos.py
src/mini_crm/application/deals/: dtos.py  enums.py  errors.py
src/mini_crm/application/organizations/: dtos.py  enums.py  errors.py
src/mini_crm/application/tasks/: __init__.py  dtos.py  errors.py
src/mini_crm/application/users/: __init__.py  dtos.py  errors.py
src/mini_crm/infrastructure/cache/: __init__.py  settings.py  setup_cache.py
src/mini_crm/infrastructure/database/: __init__.py  engine.py  mapping.py  meta.py  settings.py
src/mini_crm/infrastructure/di/: __init__.py  container.py
src/mini_crm/infrastructure/http_api/: __init__.py  app.py  auth.py  metrics.py  password_hasher.py  routers.py  settings.py
src/mini_crm/infrastructure/log/: __init__.py  config.py  settings.py
src/mini_crm/run/: alembic_runner.py  http_api.py
tests/integration/: conftest.py
tests/integration/http_api/: conftest.py
tests/integration/http_api/auth/: test_jwt.py
tests/unit/: conftest.py  factories.py
tests/unit/application/: conftest.py
tests/unit/application/activities/: conftest.py  factories.py
tests/unit/application/deals/: conftest.py  factories.py
tests/unit/application/tasks/: conftest.py  factories.py
tests/unit/application/users/: conftest.py  factories.py
(+141 files in other folders)
